[package]
name = "ratchet"
version = "0.0.0"
authors = ["wangfeiping <wangfeiping@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
ratchet_version = { path = "../common/ratchet_version" }
log = "0.4.8"
log4rs = "0.13.0"
prometheus = "0.11.0"
lazy_static = "1.4.0"
