[package]
name = "ratchet"
version = "0.0.0"
authors = ["wangfeiping <wangfeiping@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
watcher = { path = "../watcher" }
ratchet_version = { path = "../common/ratchet_version" }
exporter = { path = "../common/exporter" }
logger = { path = "../common/logger" }
log = "0.4.8"
reqwest = { version = "0.10", features = ["blocking", "json"] }
